--- a/outputs/Shiji_Zhang_GTA_Marriage.qmd
+++ b/outputs/Shiji_Zhang_GTA_Marriage.qmd
@@ -33,9 +33,8 @@ The Marriage License Statistics Data of Toronto provides the number of marriage 
 To investigate the number of marriage licenses issued in the Greater Toronto Area, I collected the Marriage License Statistics from Open Data Toronto[@rOpenDataToronto]. The data set includes the number of marriage licenses issued each month by civic centers in four different regions of the Greater Toronto Area from 2011 to 2023. The data set includes 528 observations of marriage licenses issued each month by civic centers in four different regions of the Greater Toronto Area from 2011 to 2023. variables, and the three variables focused on in this study are CIVIC_CENTRE, MARRIAGE_LICENSES, TIME_PERIOD.And after cleaning, I added a column called "Year". By using R [@citeR], and R packages “tidyverse” [@citetidyverse], “dplyr” [@citedplyr], “janitor” [@citejanitor], and “knitr” [@citeknitr], readr [@rReadr], ggplot2[@rGgplot2], lubridate [@citelubridate]. And the following table (Table 1) is an extract of the first ten rows of cleaned dataset
 
 ```{r echo=FALSE}
-toronto_marriage_clean <- read.csv("cleaned_toronto_marriage.csv") %>% mutate(YEAR = as.numeric(substr(TIME_PERIOD, 1, 4))) %>% filter(YEAR >= 2011 & YEAR <= 2023)
+toronto_marriage_clean <- read.csv("../inputs/data/cleaned_toronto_marriage.csv") %>% mutate(YEAR = as.numeric(substr(TIME_PERIOD, 1, 4))) %>% filter(YEAR >= 2011 & YEAR <= 2023)
 
-# Rename, select top 10, and create table
 toronto_marriage_clean %>% 
   rename('id' = X_id, 'Civic Centre' = CIVIC_CENTRE, 'Number of marriage licenses' = MARRIAGE_LICENSES, 'Time period' = TIME_PERIOD, 'Year' = YEAR) %>% 
   head(10) %>% 
@@ -49,8 +48,6 @@ In the first ten rows of the Marriage License Statistics data set shown in Table
 
 ```{r echo=FALSE}
 
-# Create a new column 'YEAR' by extracting the first four characters of 'TIME_PERIOD
-# Aggregate the data by year
 annual_marriage_data <- toronto_marriage_clean %>%
   group_by(YEAR) %>%
   summarise(Total_Licenses = sum(MARRIAGE_LICENSES, na.rm = TRUE))
@@ -65,7 +62,6 @@ ggplot(annual_marriage_data, aes(x = as.factor(YEAR), y = Total_Licenses)) +
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
 
-# Ensure that you replace "path_to_your_file.csv" with the actual path to your CSV file.
 
 ```
 Figure 1 shows the total marriage licenses issued per year in the GTA region since 2011. In the figure, it is not difficult to find that before 2020, the total number of marriage licenses issued each year is very stable, around 15,000. And the overall trend is slowly rising. But in 2020, the number of marriage licenses issued dropped by nearly half. This is because of the outbreak of the pandemic in 2020, not only did people spend several months quarantined, but also the civic centers were unable to operate most of the time due to the regulations during the pandemic. As for the slow rebound in the number of marriage licenses issued in 2021, it is a sequelae of the 2020 pandemic. Before the pandemic, the unemployment rate in the Toronto area reached 7.3% in March 2019 [@cite1]. After the pandemic, until July 2021, the unemployment rate reached 9.4% and was still higher than the pre-pandemic unemployment rate. The socioeconomic downturn caused by high unemployment has reduced people's disposable income, making it impossible for many people to ensure a stable life for themselves and their partners after marriage. Therefore, this has become a big reason that prevents people from getting married in 2020. In 2022 and 2023, the number of marriage licenses issued in the GTA region began to gradually return to normal levels and has reached pre-pandemic levels in 2023. Using these data to examine the media's statement that "people increasingly don't want to get married", we can find that this is not true for GTA at present.
@@ -79,7 +75,7 @@ toronto_marriage_clean <- toronto_marriage_clean %>%
   mutate(YEAR = as.numeric(substr(TIME_PERIOD, 1, 4))) %>%
   filter(YEAR >= 2011 & YEAR <= 2023)
 
-# Aggregate the data by year and region (CIVIC_CENTRE)
+
 annual_regional_data <- toronto_marriage_clean %>%
   group_by(YEAR, CIVIC_CENTRE) %>%
   summarise(Total_Licenses = sum(MARRIAGE_LICENSES, na.rm = TRUE), .groups = 'drop') # Add .groups = 'drop'
@@ -87,17 +83,13 @@ annual_regional_data <- toronto_marriage_clean %>%
 # Plot the line graph
 ggplot(annual_regional_data, aes(x = YEAR, y = Total_Licenses, group = CIVIC_CENTRE, color = CIVIC_CENTRE)) +
   geom_line() +
-  geom_point() + # Optional: to show points on the line
+  geom_point() + 
   scale_x_continuous(breaks = 2011:2023) +
   labs(title = "Figure 2:Annual Marriage License Issuance by Region (2011-2023)",
        x = "Year",
        y = "Total Marriage Licenses Issued") +
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
-
-# Ensure that you replace "path_to_your_file.csv" with the actual path to your CSV file.
-
-
 ```
 In Figure 2, it uses a line chart to show the number of marriage licenses issued by each entertainment center in each year from 2011 to 2023 (the data for East Toronto and Scarbough are only counted until 2021). In this picture, we can see the trends and changes in the annual publication volume of each entertainment center, which is also the characteristic of the line chart. Also taking 2020 as the dividing line, before 2020, the number of marriage licenses issued by the cultural centers in four different regions was stable and level. After 2020, the number of marriage licenses issued in Toronto increased rapidly and reached a peak in 2023. Although North York's data did not rise, it also returned to pre-pandemic levels in 2023. Although there are no data for East Toronto and Scarbough after 2021, the issuance of marriage licenses in Toronto in 2023 has reached about double the pre-pandemic level, and the data in North York has also returned to pre-pandemic levels. Therefore, we can say that the number of marriage licenses issued in the GTA in 2023 will be at least the same as the number before the pandemic, and will most likely be higher than before the pandemic. Judging from the current data for 2023, people’s pursuit of marriage is increasing instead of decreasing. Therefore, relying on Figure 2 to examine the media's statement that "people increasingly don't want to get married", this statement still does not hold true for the GTA situation.
 
