Checked the gramma in the paper and editted the reference list.

--- a/outputs/Shiji_Zhang_GTA_Marriage.qmd
+++ b/outputs/Shiji_Zhang_GTA_Marriage.qmd
@@ -2,7 +2,7 @@
 title: "Investigate the number of marriage licenses issued in the Greater Toronto Area since 2011: The number of marriages is not declining as reported"
 author: 
   - Shiji Zhang
-thanks: "Code and data are available at: https://github.com/Northboi/TorontoMarriage"
+thanks: "Code and data are available at: https://github.com/Northboi/GTA_Marriage_Licenses"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 abstract: "There is a growing trend of people opting not to marry or engage in romantic relationships. This report aims to investigate the total number of marriage licenses issued each year in the Greater Toronto Area from 2011 to 2023 and the total number of marriage licenses issued by different civic centers during this period to find if the report about declining marriages is true. I found that the number of marriage licenses issued of recent years in the GTA has remained stable except for 2020 and 2021, the two years most affected by the outbreak of the pandemic"
 output:
@@ -23,9 +23,9 @@ library(knitr)
 
 # Introduction
 
-Marriage is the result of love between two people and is an important part of building a family. In most cases, marriage becomes the choice of a couple when they have complete control over their current lives and are ready to move on to the next phase of their lives. But nowadays, we often hear that more and more people choose not to get married or even fall in love. This may be because instead of taking on family responsibilities, they prefer to just satisfy themselves every day instead of being with a partner.[@cite3] People's current concept of marriage is affected by many factors, such as the need for financial stability and the emphasis on personal happiness. It is not only people's subjective factors that can determine the number of marriages, objective factors such as the social economy will also have an impact on the number of marriage certificates issued. Less disposable income will make people feel less secure about their futures and those of their partners, so as individuals choose to be cautious in the face of economic instability, the number of marriages may increase. decline. In the same year, cultural centers in different regions will also issue different numbers of marriage licenses because each region has different economic and other external conditions. Therefore, we need to consider the above subjective and objective factors to judge whether the number of people getting married today is really decreasing as reported.
+"Marriage is the result of love between two people and is an important part of building a family. Typically, a couple chooses to marry when they have established control over their current lives and are ready to embark on the next phase. However, it is increasingly common to hear of people opting not to marry or even fall in love. This trend may stem from a preference to focus on personal fulfillment every day, rather than taking on family responsibilities with a partner.[@cite2] People's contemporary view of marriage is influenced by numerous factors, including the need for financial stability and a greater emphasis on personal happiness. The prevalence of marriage is not solely dictated by subjective factors; objective elements like the socio-economic environment also play a role. For instance, having less disposable income can make individuals feel insecure about their and their partner's future. Consequently, in times of economic instability, there might be a decline in the number of marriages. Additionally, the issuance of marriage licenses varies across cultural centers in different regions, reflecting the diverse economic and other external conditions of each area. Therefore, to accurately assess whether there is a real decrease in the number of people getting married today, as reported, we must consider these subjective and objective factors
 
-The Marriage License Statistics Data of Toronto provides the number of marriage licenses issued each month by civic centers in four different regions of the Greater Toronto Area from 2011 to 2023. The four different regions are East Toronto (ET), North York (NY), Scarbough (SC) and Toronto (TO). In Section 2.1, this data set is introduced and first used to divide the period from 2011 to 2023 The total number of marriage licenses issued each year during these 13 years was visualized. As can be seen from Figure 1, except for 2020 and 2021, the two years most affected by the outbreak of the pandemic, the number of marriage licenses issued in the GTA has remained stable. In Section 2.2, this data set is introduced for the second time to visualize the number of marriage licenses issued by cultural centers in different regions in the past 13 years. It was found that the number of marriage licenses issued by various entertainment centers has not dropped sharply in recent years, but the number issued in the Toronto area has increased significantly. This suggests that the number of marriages has not declined and remains stable barring external influences such as the pandemic.
+The Marriage License Statistics Data for Toronto presents the number of marriage licenses issued monthly by civic centers in four regions of the Greater Toronto Area (GTA) from 2011 to 2023. These regions are East Toronto (ET), North York (NY), Scarborough (SC), and Toronto (TO). In Section 2.1, the dataset is first utilized to analyze the total number of marriage licenses issued annually over these 13 years. Figure 1 reveals that, apart from a notable decrease in 2020 and 2021 due to the pandemic, the issuance of marriage licenses in the GTA has remained relatively stable. Section 2.2 reintroduces this dataset to explore the distribution of licenses issued by cultural centers across the different regions during the same period. The analysis shows that the overall number of licenses issued by various centers has not decreased much in recent years, and there has been a marked increase in the Toronto area. This indicates that, excluding external factors like the pandemic, the number of issued marriages licenses has remained stable in GTA.
 
 # Data
 ## The total number of marriage licenses issued each year in the GTA region
@@ -64,7 +64,8 @@ ggplot(annual_marriage_data, aes(x = as.factor(YEAR), y = Total_Licenses)) +
 
 
 ```
-Figure 1 shows the total marriage licenses issued per year in the GTA region since 2011. In the figure, it is not difficult to find that before 2020, the total number of marriage licenses issued each year is very stable, around 15,000. And the overall trend is slowly rising. But in 2020, the number of marriage licenses issued dropped by nearly half. This is because of the outbreak of the pandemic in 2020, not only did people spend several months quarantined, but also the civic centers were unable to operate most of the time due to the regulations during the pandemic. As for the slow rebound in the number of marriage licenses issued in 2021, it is a sequelae of the 2020 pandemic. Before the pandemic, the unemployment rate in the Toronto area reached 7.3% in March 2019 [@cite1]. After the pandemic, until July 2021, the unemployment rate reached 9.4% and was still higher than the pre-pandemic unemployment rate. The socioeconomic downturn caused by high unemployment has reduced people's disposable income, making it impossible for many people to ensure a stable life for themselves and their partners after marriage. Therefore, this has become a big reason that prevents people from getting married in 2020. In 2022 and 2023, the number of marriage licenses issued in the GTA region began to gradually return to normal levels and has reached pre-pandemic levels in 2023. Using these data to examine the media's statement that "people increasingly don't want to get married", we can find that this is not true for GTA at present.
+Figure 1 illustrates the total number of marriage licenses issued annually in the GTA region since 2011. From this figure, it's apparent that before 2020, the number of licenses issued each year was remarkably stable, averaging around 15,000, with a slight upward trend. However, there was a significant drop in 2020, with the number of licenses falling by nearly half. This decline can be attributed to the outbreak of the pandemic in 2020, which not only because of a long periods of quarantine but also because of the stopped operation of civic centers due to pandemic-related regulations. The modest recovery and still small amount of issuance of marriage licenses in 2021 can be seen as an aftereffect of the 2020 pandemic. The economic impact is further underscored by the unemployment rates in the Toronto area. Before the pandemic, the unemployment rate in the Toronto area reached 7.3% in March 2019[@cite1]. After the pandemic, until July 2021, the
+unemployment rate reached 9.4% and was still higher than the pre-pandemic unemployment rate. This socioeconomic downturn, marked by high unemployment and reduced disposable income, likely deterred many individuals from marrying, as they struggled to ensure financial stability for themselves and their potential partners. However, by 2022 and 2023, the number of marriage licenses issued in the GTA region began to normalize, returning to pre-pandemic levels by 2023. Analyzing these data in the context of media claims that people are increasingly reluctant to marry, it becomes evident that this trend does not currently hold true for the GTA.
 
 ## The number of marriage licenses issued each year in each region
 
@@ -91,12 +92,11 @@ ggplot(annual_regional_data, aes(x = YEAR, y = Total_Licenses, group = CIVIC_CEN
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
 ```
-In Figure 2, it uses a line chart to show the number of marriage licenses issued by each entertainment center in each year from 2011 to 2023 (the data for East Toronto and Scarbough are only counted until 2021). In this picture, we can see the trends and changes in the annual publication volume of each entertainment center, which is also the characteristic of the line chart. Also taking 2020 as the dividing line, before 2020, the number of marriage licenses issued by the cultural centers in four different regions was stable and level. After 2020, the number of marriage licenses issued in Toronto increased rapidly and reached a peak in 2023. Although North York's data did not rise, it also returned to pre-pandemic levels in 2023. Although there are no data for East Toronto and Scarbough after 2021, the issuance of marriage licenses in Toronto in 2023 has reached about double the pre-pandemic level, and the data in North York has also returned to pre-pandemic levels. Therefore, we can say that the number of marriage licenses issued in the GTA in 2023 will be at least the same as the number before the pandemic, and will most likely be higher than before the pandemic. Judging from the current data for 2023, people’s pursuit of marriage is increasing instead of decreasing. Therefore, relying on Figure 2 to examine the media's statement that "people increasingly don't want to get married", this statement still does not hold true for the GTA situation.
+Figure 2 employs a line chart to depict the annual number of marriage licenses issued by each cultural center in the GTA from 2011 to 2023. Notably, data for East Toronto and Scarborough are available only up to 2021. This chart effectively illustrates the trends and fluctuations in license issuance at each center, a characteristic strength of line charts. Using 2020 as a pivotal year, we observe that prior to 2020, the issuance of marriage licenses by the cultural centers in all four regions was stable and consistent. However, post-2020, there was a marked increase in the number of licenses issued in Toronto, culminating in a peak in 2023. While the numbers for North York didn't show a significant rise, they did return to pre-pandemic levels by 2023. Although data for East Toronto and Scarborough post-2021 are missing, the surge in Toronto, where the issuance of marriage licenses in 2023 was approximately double that of the pre-pandemic period, and the recovery in North York suggest that the overall number of marriage licenses issued in the GTA in 2023 will likely equal or surpass pre-pandemic figures. This trend indicates an increasing inclination towards marriage, contrary to the declining interest suggested by media reports. Therefore, based on the data presented in Figure 2, the media's statement that 'people increasingly don't want to get married' does not seem to apply to the GTA as of 2023.
 
 # Discuss
 
-Analysis of the data set "Marriage License Statistics" shows that the current number of marriage licenses issued in the Greater Toronto Area does not prove that people are increasingly resistant to marriage. On the contrary, you can see from Figure 2 that the number of marriage licenses issued in Toronto will nearly double in 2023. What the entire Section 2 expresses is that people’s pursuit of marriage in GTA has not weakened, except that the total number of marriage licenses issued in 2020 has dropped significantly as shown in Figures 1 and 2. But this can be explained by the 2020 pandemic and the resulting economic depression. Less disposable income makes the future full of uncertainty, and many people have given up on getting married in 2020. However, this is a sudden objective factor. Therefore, after analysis, we found that what the media reported was not necessarily correct, and some media fabricated some fake news just to attract attention. To summarize real results, the most important thing is to have reliable and authentic data and sources.
- 
+The analysis of the 'Marriage License Statistics' data set indicates that the current number of marriage licenses issued in the Greater Toronto Area does not support the notion that there is an increasing resistance to marriage. Contrary to this idea, as illustrated in Figure 2, the number of marriage licenses issued in Toronto in 2023 was nearly double. The overarching message of Section 2 is that the pursuit of marriage in the GTA remains strong. The significant drop in the total number of marriage licenses issued in 2020, as seen in both Figures 1 and 2, can be attributed to the pandemic and the subsequent economic downturn. The uncertainty and reduced disposable income of that period led many to postpone or forgo marriage plans. However, this decline appears to be a temporary response to an extraordinary situation rather than a long-term trend. Upon analysis, it becomes evident that the media's portrayal may not always align with reality, and some reports may be sensationalized to draw attention. Therefore, in order to get accurate results and summarize real trends, it is crucial to rely on reliable, authentic data and sources.
 \newpage
 
 # References
